WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217705
MediaRecorder .stop should not throw in Inactive state
https://bugs.webkit.org/show_bug.cgi?id=217705
Summary
MediaRecorder .stop should not throw in Inactive state
youenn fablet
Reported
2020-10-14 05:57:20 PDT
MediaRecorder .stop should not throw in Inactive state
Attachments
Patch
(8.56 KB, patch)
2020-10-14 06:00 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-10-14 05:57:59 PDT
See
https://github.com/w3c/mediacapture-record/pull/158
youenn fablet
Comment 2
2020-10-14 06:00:11 PDT
Created
attachment 411316
[details]
Patch
youenn fablet
Comment 3
2020-10-14 06:01:01 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/26114
EWS Watchlist
Comment 4
2020-10-14 06:01:04 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 5
2020-10-14 11:56:09 PDT
Committed
r268477
: <
https://trac.webkit.org/changeset/268477
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411316
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-10-14 11:57:25 PDT
<
rdar://problem/70302371
>
Darin Adler
Comment 7
2020-10-18 12:51:00 PDT
Comment on
attachment 411316
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=411316&action=review
> Source/WebCore/Modules/mediarecorder/MediaRecorder.cpp:216 > - return { }; > + return;
Should just delete this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug