MediaRecorder .stop should not throw in Inactive state https://bugs.webkit.org/show_bug.cgi?id=217705

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

fix-217705

* web-platform-tests/mediacapture-record/MediaRecorder-stop-expected.txt:
* web-platform-tests/mediacapture-record/MediaRecorder-stop.html:

Source/WebCore:

Update according spec changes in https://github.com/w3c/mediacapture-record/pull/158.
stop no longer throws if media recorder is inactive.
Covered by updated test.

* Modules/mediarecorder/MediaRecorder.cpp:
(WebCore::MediaRecorder::stopRecording):
* Modules/mediarecorder/MediaRecorder.h:
* Modules/mediarecorder/MediaRecorder.idl:


Canonical link: https://commits.webkit.org/230458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268477 268f45cc-cd09-0410-ab3c-d52691b4dbfc